# drawbot

./: .gitignore  CMakeCache.txt  Makefile  README.md  backup.txt  cmake_install.cmake  config.py  drawbot  function_archive.py  gcode.py  gcode_test.py  image.py  line.py  main.py  notes.md  pyproject.toml  requirements.txt  setup.cfg  test_line.py
c++/: CMakeLists.txt  a.out  angle.cpp  angle.h  contour.cpp  contour.h  family.cpp  family.h  fill_strategy.cpp  fill_strategy.h  gcode.cpp  gcode.h  line.cpp  line.h  main.cpp  point.cpp  point.h  ray.cpp  ray.h
c++/include/: angle.h  color_strategy.h  contour.h  contour_fill_strategy.h  family.h  fill_strategy.h  grid_fill_strategy.h  intersection_strategy.h  linear_fill_strategy.h  point.h
c++/src/: CMakeLists.txt  angle.cpp  color_strategy.cpp  contour_fill_strategy.cpp  family.cpp  fill_strategy.cpp  gcode.cpp  grid_fill_strategy.cpp  intersection_strategy.cpp  line.cpp  linear_fill_strategy.cpp  main.cpp  point.cpp  test.cpp
geometry/: contour.py  contour_family.py  line.py  point.py
python/: Zig Zag - Shapely.ipynb  contour_fill.py  contour_fill_shapely.py  convert_polygons.py  debugging.py  gcode.py  gradient_fill.py  main.py  requirements.txt  skeleton.py  test_line.py  test_numba.py
python/fill_strategy/: contour_fill_shapely.py  zigzag.py
python/geometry/: contour.py  line.py  point.py
python/shade_strategy/: gradient_fill.py
raspi_python/: drawbot.py  drawbot_server.py
raspi_python/app/: forms.py  routes.py
raspi_python/app/templates/: index.html
src/drawbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fill_strategy/: fermat_spiral.py  outline.py  spiral.py  zigzag.py
src/shade_strategy/: gradient_fill.py
src/utilities/: gcode.py  metrics.py  shapely_conversion.py  shapely_utilities.py
tests/: test.cpp
tests/fill_strategy/: test_fermat.py  test_spiral.py  test_zigzag.py
tests/test_utilities/: test_gcode.py  test_metric.py  test_shapely_conversion.py  test_shapely_utilities.py
