[metadata]
name = drawbot
description = Collection of python modules for different fill patterns
author = Evan Bosia
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    fill_strategy
    shade_strategy
    utilities
install_requires =
    cycler>=0.10.0
    kiwisolver>=1.3.2
    llvmlite>=0.37.0
    matplotlib>=3.4.3
    numba>=0.54.0
    numpy>=1.20.0
    opencv-python>=4.5.3.56
    Pillow>=8.3.2
    pyparsing>=2.4.7
    python-dateutil>=2.8.2
    Shapely>=1.7.1
    six>=1.16.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
fill_strategy = py.typed
shade_strategy = py.typed
utilities = py.typed

[flake8]
max-line-length = 160